# veg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
database/: docker-compose.yml
src/: json.h  main.cpp
src/frontend/: application.cpp  application.h
